[gd_scene load_steps=49 format=2]

[ext_resource path="res://Asset/Yamabushi_tengu/Run.png" type="Texture" id=1]
[ext_resource path="res://Asset/Yamabushi_tengu/Walk.png" type="Texture" id=2]
[ext_resource path="res://Asset/Yamabushi_tengu/Hurt.png" type="Texture" id=3]
[ext_resource path="res://Asset/Yamabushi_tengu/Dead.png" type="Texture" id=4]
[ext_resource path="res://Yamabushi.gd" type="Script" id=5]
[ext_resource path="res://Asset/Yamabushi_tengu/Jump.png" type="Texture" id=6]
[ext_resource path="res://Asset/Yamabushi_tengu/Attack_1.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Jalan",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Jatuh",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Lari",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Mati",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "Serang",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Terluka",
"speed": 5.0
} ]

[sub_resource type="Animation" id=38]
resource_name = "Jalan"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jalan" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=39]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Jalan" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=40]
resource_name = "Serang"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Serang" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "star_walk"
} ]
}

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 15, 45 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.25, 35 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 19.5, 20.5 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 20.5, 21 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 19, 44.5 )

[node name="Yamabushi" type="KinematicBody2D" groups=["Hit"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "Jalan"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jalan = SubResource( 38 )
anims/RESET = SubResource( 39 )
anims/Serang = SubResource( 40 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 10, 3 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -21, 18 )
shape = SubResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -13.75, 29 )
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
position = Vector2( 28, 23 )
enabled = true
collision_mask = 2

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 40.5, 18.5 )
shape = SubResource( 36 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( 40.5, 18 )
shape = SubResource( 37 )

[node name="LukaDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LukaDetector"]
position = Vector2( -9, 19.5 )
shape = SubResource( 41 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_entered" from="LukaDetector" to="." method="_on_LukaDetector_body_entered"]
